--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -38,6 +38,7 @@
       "plan": "计划",
       "billing": "账单",
       "usage": "使用情况",
+      "referrals": "推荐",
       "knowledgeBase": "知识库",
       "integrations": "集成",
       "envManager": "环境管理器"
@@ -83,6 +84,33 @@
         "cancelDeletionDescription": "你确定要取消账户删除吗？你的账户和所有数据将被保留。",
         "cancelDeletion": "取消删除"
       }
+    },
+    "referrals": {
+      "title": "推荐计划",
+      "description": "与朋友分享您的推荐链接。当他们注册并创建账户时，您将获得",
+      "creditsPerReferral": "100个永久积分",
+      "maxEarnable": "通过推荐最多可获得：",
+      "maxCredits": "$100积分",
+      "yourReferralCode": "您的推荐码",
+      "referralLink": "推荐链接",
+      "refresh": "刷新",
+      "copyCode": "复制代码",
+      "copyLink": "复制链接",
+      "share": "分享",
+      "stats": {
+        "totalReferrals": "总推荐数",
+        "successful": "成功",
+        "creditsEarned": "已获积分"
+      },
+      "recentReferrals": "最近推荐",
+      "signupComplete": "注册完成",
+      "pending": "待处理",
+      "noReferrals": "暂无推荐。分享您的推荐链接开始吧！",
+      "copied": "已复制！",
+      "codeCopied": "推荐码已复制到剪贴板",
+      "linkCopied": "推荐链接已复制到剪贴板",
+      "codeRefreshed": "推荐码刷新成功",
+      "refreshFailed": "刷新推荐码失败"
     },
     "billing": {
       "title": "账单和订阅",
@@ -156,6 +184,9 @@
     "monthlyOn1st": "每月1号"
   },
   "sidebar": {
+    "referAndEarn": "推荐赚取",
+    "new": "新",
+    "upgrade": "升级",
     "chats": "聊天",
     "agents": "智能体",
     "workers": "工作器",
@@ -492,6 +523,9 @@
     }
   },
   "auth": {
+    "haveReferralCode": "有推荐码吗？",
+    "referralCode": "推荐码",
+    "enterCode": "输入代码",
     "logIntoAccount": "登录你的账户",
     "createAccount": "创建账号",
     "signInOrCreateAccount": "登录或创建您的Kortix账户",
